# shale-onedrive

./: .gitignore  .gitmodules  README.md  meson.build
src/: auth.cpp  auth.h  auth.hpp  constants.h  main.cpp  onedrive.cpp  onedrive.h
subprojects/: cpr.wrap  rocksdb.wrap  sdbus-cpp.wrap  simdjson.wrap  yyjson.wrap
subprojects/packagefiles/simdjson/: meson.build
